# Deepstream_Project

./: README.md
Deepstream_Face/: README.md  a.json  arcface.txt  arcface_trt  centerface.trt  centerface.txt  config.json  deepstream_app_config_centerface.txt  facenet.txt  labels.txt  new_centerface.trt
Deepstream_Face/CenterFace/: CMakeLists.txt  README.md  config.yaml  export_onnx.py  make_trt.py  run.sh
Deepstream_Face/arcface/: CMakeLists.txt  README.md  arcface-mobilefacenet.cpp  arcface-r100.cpp  arcface-r50.cpp  arcface.cpp  arcface.h  main.cpp
Deepstream_Face/includes/: nvdsinfer.h
Deepstream_Face/nvdsinfer_custom_impl_ArcFace/: Makefile  nvdsparsebbox_ArcFace.cpp
Deepstream_Face/nvdsinfer_custom_impl_CenterFace/: Makefile  nvdsinfer_customclassifierparser.cpp  nvdsparsebbox_CenterFace  nvdsparsebbox_CenterFace.cpp
Deepstream_Face/src/: .Makefile.swo  Makefile  cosine_similarity.c  cosine_similarity.h  deepstream_app.c  deepstream_app.h  deepstream_app_main.c  face
Deepstream_Yolo/: README.md  config_infer_primary_yoloV2.txt  config_infer_primary_yoloV2_tiny.txt  config_infer_primary_yoloV3.txt  config_infer_primary_yoloV3_tiny.txt  config_infer_primary_yoloV4.txt  config_infer_primary_yoloV5.txt  config_infer_primary_yolo_tlt.txt  deepstream_app_config_yoloV2.txt  deepstream_app_config_yoloV2_tiny.txt  deepstream_app_config_yoloV3.txt  deepstream_app_config_yoloV3_tiny.txt  deepstream_app_config_yoloV4.txt  deepstream_app_config_yoloV5.txt  deepstream_app_config_yolo_tlt.txt  labels_tlt.txt
Deepstream_Yolo/nvdsinfer_custom_impl_Yolo/: Makefile  nvdsparsebbox_Yolo.cpp  yololayer.h
Deepstream_Yolo/src/: Makefile  README  ads  deepstream_app.c  deepstream_app.h  deepstream_app_main.c
Deepstream_Yolo/tensorrtx/yolov4/: gen_wts.py  yolov4.cfg
Deepstream_Yolo/tensorrtx/yolov4/tool/: torch_utils.py
Deepstream_Yolo/tensorrtx/yolov5/: get_wts.py  hardswish.cu  hardswish.h  yolov5.cpp
Deepstream_Yolo/tensorrtx/yolov5/utils/: general.py
Deepstream_Yolo/trans_project/: requirements.txt
Deepstream_Yolo/trans_project/includes/common/: logging.h
Deepstream_Yolo/trans_project/yolov4_convert/: CMakeLists.txt  config.yaml  export_onnx.py  rev.py  yolov4.cpp  yolov4.h
Deepstream_Yolo/trans_project/yolov5_convert/: CMakeLists.txt  common.hpp  config.yaml  convert.py  demo_pytorch2onnx.py  yolov5.cpp  yolov5.h
Deepstream_Yolo/trans_project/yolov5_convert/models/: experimental.py
Deepstream_Yolo/trans_project/yolov5_convert/utils/: activations.py  datasets.py
Ocr/: README.md  char_std_5530.txt  char_std_5990.txt  char_std_6862.txt  config.json  config_infer_primary_yoloV3.txt  config_infer_secondary.txt  context.txt  deepstream_app_config_yoloV3.txt  deepstream_ocr.txt  text.cfg
Ocr/DBnet/: infer_on_trt_dynamic.py
Ocr/nvdsinfer_custom_impl_Dbnet/: Makefile  README  nvdsparsebbox_dbnet.cpp
Ocr/nvdsinfer_custom_impl_Yolo/: Makefile  Makefile.bak  nvdsinfer_yolo_engine.cpp  nvdsparsebbox_Yolo.cpp  trt_utils.cpp  trt_utils.h  yolo.cpp  yolo.h  yoloPlugins.cpp
Ocr/nvdsinfer_custom_text/: Makefile  common.h  logger.cpp.bak  logging.h.bak  nvdsinfer_text_engine.cpp.bak  nvdsparse_text.cpp
Ocr/src/: Makefile  deepstream_app.c  deepstream_app.h  deepstream_app_config_parser.c  deepstream_app_main.c
